# base_of_git

./: README.MD  pyproject.toml
data/: english_names.txt
src/: main.py
